# gitignore.rs

./: .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md
src/: error.rs  file.rs  ignore_file.rs  lib.rs  pattern.rs  repo.rs  ruleset.rs
tests/resources/fake_repo/: .badgitignore  .gitignore
tests/resources/fake_repo/a_dir/a_nested_dir/: .gitignore
