cargo-features = ["edition"]

[package]
name = "gitignore"
edition = "2018"
version = "1.0.7"
authors = ["Nathan Kleyn <nathan@nathankleyn.com>"]
description = "Implementation of .gitignore file parsing and glob testing in Rust."
license = "MIT OR Apache-2.0"
documentation = "https://nathankleyn.com/gitignore.rs/gitignore/"
repository = "https://github.com/nathankleyn/gitignore.rs"

[dependencies]
failure = "0.1.2"
failure_derive = "0.1.2"
globset = "0.2.0"

[dev-dependencies]
tempdir = "0.3.5"

[features]
# Whether or not to enable compilation of benchmarks which currently require
# a nightly version of Rust because the test crate is marked as unstable.
benchmarks = []
