cargo-features = ["edition"]

[package]
name = "gitignore"
edition = "2018"
version = "1.0.11"
authors = ["Nathan Kleyn <nathan@nathankleyn.com>"]
description = "Implementation of .gitignore file parsing and glob testing in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/codota/gitignore.rs"

[dependencies]
failure = "0.1.2"
failure_derive = "0.1.2"
glob = "0.2.11"
globset = "0.4.1"

[dev-dependencies]
tempfile = "3.0.3"

[features]
# Whether or not to enable compilation of benchmarks which currently require
# a nightly version of Rust because the test crate is marked as unstable.
benchmarks = []
